--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -12,3 +12,6 @@ DEFMT_LOG = "trace"
 [unstable]
 build-std = ["core"]
 build-std-features = ["panic_immediate_abort"]
+
+[alias]
+host-test = "test --target x86_64-unknown-linux-gnu --lib"
