--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,16 +6,16 @@ name = "analogue-embassy"
 version = "0.1.0"
 
 [dependencies]
-cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
-cortex-m-rt = "0.7.5"
+cortex-m = { version = "0.7.7", optional = true, features = ["inline-asm", "critical-section-single-core"] }
+cortex-m-rt = { version = "0.7.5", optional = true }
 defmt = { version = "1.0.1", optional = true }
 defmt-rtt = { version = "1.0.0", optional = true }
-embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread"] }
-embassy-stm32 = { version = "0.4.0", features = ["defmt", "stm32f407vg", "unstable-pac", "memory-x", "time-driver-any", "exti"] }
-embassy-futures = "0.1.2"
-embassy-sync = "0.7.2"
-embassy-time = { version = "0.5.0", features = ["tick-hz-32_768"] }
-panic-halt = "1.0.0"
+embassy-executor = { version = "0.9.1", optional = true, features = ["arch-cortex-m", "executor-thread"] }
+embassy-stm32 = { version = "0.4.0", optional = true, features = ["defmt", "stm32f407vg", "unstable-pac", "memory-x", "time-driver-any", "exti"] }
+embassy-futures = { version = "0.1.2", optional = true }
+embassy-sync = { version = "0.7.2", optional = true }
+embassy-time = { version = "0.5.0", optional = true, features = ["tick-hz-32_768"] }
+panic-halt = { version = "1.0.0", optional = true }
 panic-probe = { version = "1.0.0", features = ["print-defmt"], optional = true }
 
 [[bin]]
@@ -51,3 +51,16 @@ debug = [
     "embassy-time/defmt-timestamp-uptime",
     "embassy-stm32/defmt",
 ]
+
+embedded = [
+    "cortex-m",
+    "cortex-m-rt",
+    "embassy-executor",
+    "embassy-stm32",
+    "embassy-sync",
+    "embassy-time",
+    "embassy-futures",
+]
+
+[dev-dependencies]
+rstest = "0.26.1"
